package edu.fiuba.algo3.modelo.observer;

public interface Observador {
    void actualizar();
}
